# mle-sagemaker-notebook-instance-lifecycle-config

./: README.md
auto-stop-idle/: autostop.py  pyproject.toml
