[tool.poetry]
name = "auto-stop-idle"
version = "0.0.1"
description = "This script stops a SageMaker notebook once it's idle for more than 1 hour. (default time)"
authors = ["ML Enablement <mlenablement@bbc.co.uk>"]
readme = "README.md"
repository = "https://github.com/bbc/mle-sagemaker-notebook-instance-lifecycle-config/auto-stop-idle"
keywords = [
    "AWS",
    "SageMaker"
]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.26.140"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
